// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings.vue Should let the user switch workspaces 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col-lg-5 col">
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text success--text" style="display: none;">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-check-circle theme--dark success--text"></i>
          <div class="v-alert__content">Settings updated</div>
        </div>
      </div>
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
          <div class="v-alert__content">Error while updating settings</div>
        </div>
      </div>
      <h4>Server</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="input-118" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">RPC Server</label><input disabled="disabled" id="input-118" type="text"></div>
              </div>
            </div>
          </div>
          To use another server, create another workspace.
        </div>
      </div>
      <h4>Default Contracts Call Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select">
            <div class="v-input__control">
              <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-159" class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-select__slot"><label for="defaultAccount" class="v-label theme--light" style="left: 0px; position: absolute;">Default From Account</label>
                  <div class="v-select__selections"><input id="defaultAccount" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                  </div><input type="hidden">
                </div>
                <div class="v-menu">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="v-input mt-4 v-input--hide-details theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="gasPrice" class="v-label theme--light" style="left: 0px; position: absolute;">Default Gas Price (wei)</label><input id="gasPrice" type="text"></div>
              </div>
            </div>
          </div>
          <div class="v-input mt-4 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="gasLimit" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Default Maximum Gas</label><input id="gasLimit" type="text"></div>
              </div>
            </div>
          </div>
          <div class="row mt-2 pb-1 mr-2">
            <div class="spacer"></div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary" id="updateCallOptions"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Integrations</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table theme--light">
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <tbody>
                  <tr class="">
                    <td class="text-start">Alchemy API</td>
                    <td class="text-start">
                      Disabled
                    </td>
                    <td class="text-right"><button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Manage</span></button></td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <h4>Each workspace has separate integration settings.</h4>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Workspaces</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
            <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
              <div class="v-toolbar__content" style="height: 48px;">
                <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus theme--light"></i>New Workspace</span></button>
              </div>
            </header>
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <thead class="v-data-table-header">
                  <tr>
                    <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="RPC Server: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>RPC Server</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                  </tr>
                </thead>
                <tbody>
                  <tr class="">
                    <td class="text-start">Ganache</td>
                    <td class="text-start">http://localhost:9545</td>
                    <td class="text-start"><button type="button" id="switchTo-Ganache" class="v-icon notranslate v-icon--link mdi mdi-swap-horizontal theme--light"></button></td>
                  </tr>
                  <tr class="">
                    <td class="text-start">Hardhat</td>
                    <td class="text-start"></td>
                    <td class="text-start"><button type="button" id="switchTo-Hardhat" class="v-icon notranslate v-icon--link mdi mdi-swap-horizontal theme--light"></button></td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div class="v-data-footer">
              <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-select">
                  <div class="v-input__control">
                    <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-144" class="v-input__slot">
                      <div class="v-select__slot">
                        <div class="v-select__selections">
                          <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-144" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                        </div>
                        <div class="v-input__append-inner">
                          <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                        </div><input type="hidden" value="10">
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div class="v-data-footer__pagination">1-2 of 2</div>
              <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
              <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
            </div>
          </div>
        </div>
      </div>
      <h4>Advanced Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="row">
            <div class="col align-self-center">
              Transactions Tracing <a target="_blank" href="https://doc.tryethernal.com/dashboard-pages/transactions#trace" style="text-decoration: none;"><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i></a></div>
            <div class="col">
              <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select">
                <div class="v-input__control">
                  <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-166" class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-select__slot"><label for="input-166" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Status</label>
                      <div class="v-select__selections">
                        <div class="v-select__selection v-select__selection--comma">Disabled</div><input id="input-166" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                      </div>
                      <div class="v-input__append-inner">
                        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                      </div><input type="hidden" value="disabled">
                    </div>
                    <div class="v-menu">
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="row mt-2 pb-1 mr-1">
            <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <div class="pa-0 error v-sheet v-sheet--outlined theme--light rounded">
        <div class="elevation-0 v-card v-sheet theme--light">
          <div class="v-card__text font-weight-medium error--text">
            <div class="row">
              Resetting this workspace will remove all accounts/transactions/blocks/contracts from your dashboard.
              You will need to resync them.
              This cannot be undone.
            </div>
            <div class="row mt-2 pb-1">
              <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default error" id="resetWorkspace"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-sync theme--light"></i>Reset Workspace</span></button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings.vue Should let the user update call options 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col-lg-5 col">
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text success--text" style="">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-check-circle theme--dark success--text"></i>
          <div class="v-alert__content">Settings updated</div>
        </div>
      </div>
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
          <div class="v-alert__content">Error while updating settings</div>
        </div>
      </div>
      <h4>Server</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="input-57" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">RPC Server</label><input disabled="disabled" id="input-57" type="text"></div>
              </div>
            </div>
          </div>
          To use another server, create another workspace.
        </div>
      </div>
      <h4>Default Contracts Call Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select">
            <div class="v-input__control">
              <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-97" class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-select__slot"><label for="defaultAccount" class="v-label theme--light" style="left: 0px; position: absolute;">Default From Account</label>
                  <div class="v-select__selections"><input id="defaultAccount" readonly="readonly" type="text" aria-readonly="false" autocomplete="off"></div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                  </div><input type="hidden" value="0x123">
                </div>
                <div class="v-menu">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="v-input mt-4 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: -24px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="gasPrice" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Default Gas Price (wei)</label><input id="gasPrice" type="text"></div>
              </div>
            </div>
          </div>
          <div class="v-input mt-4 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="gasLimit" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Default Maximum Gas</label><input id="gasLimit" type="text"></div>
              </div>
            </div>
          </div>
          <div class="row mt-2 pb-1 mr-2">
            <div class="spacer"></div> <button type="button" class="mt-1 v-btn v-btn--depressed v-btn--flat v-btn--has-bg v-btn--loading theme--light v-size--default primary" id="updateCallOptions"><span class="v-btn__content">Update</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Integrations</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table theme--light">
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <tbody>
                  <tr class="">
                    <td class="text-start">Alchemy API</td>
                    <td class="text-start">
                      Disabled
                    </td>
                    <td class="text-right"><button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Manage</span></button></td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <h4>Each workspace has separate integration settings.</h4>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Workspaces</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
            <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
              <div class="v-toolbar__content" style="height: 48px;">
                <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus theme--light"></i>New Workspace</span></button>
              </div>
            </header>
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <thead class="v-data-table-header">
                  <tr>
                    <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="RPC Server: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>RPC Server</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                  </tr>
                </thead>
                <tbody>
                  <tr class="">
                    <td class="text-start">Hardhat</td>
                    <td class="text-start"></td>
                    <td class="text-start"><button type="button" id="switchTo-Hardhat" class="v-icon notranslate v-icon--link mdi mdi-swap-horizontal theme--light"></button></td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div class="v-data-footer">
              <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--is-booted v-select">
                  <div class="v-input__control">
                    <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-83" class="v-input__slot">
                      <div class="v-select__slot">
                        <div class="v-select__selections">
                          <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-83" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                        </div>
                        <div class="v-input__append-inner">
                          <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                        </div><input type="hidden" value="10">
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div class="v-data-footer__pagination">1-1 of 1</div>
              <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
              <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
            </div>
          </div>
        </div>
      </div>
      <h4>Advanced Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="row">
            <div class="col align-self-center">
              Transactions Tracing <a target="_blank" href="https://doc.tryethernal.com/dashboard-pages/transactions#trace" style="text-decoration: none;"><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle-outline theme--light" style="font-size: 16px;"></i></a></div>
            <div class="col">
              <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select">
                <div class="v-input__control">
                  <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-104" class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span>​</span></legend>
                    </fieldset>
                    <div class="v-select__slot"><label for="input-104" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Status</label>
                      <div class="v-select__selections">
                        <div class="v-select__selection v-select__selection--comma">Disabled</div><input id="input-104" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                      </div>
                      <div class="v-input__append-inner">
                        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                      </div><input type="hidden" value="disabled">
                    </div>
                    <div class="v-menu">
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="row mt-2 pb-1 mr-1">
            <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Update</span></button>
          </div>
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <div class="pa-0 error v-sheet v-sheet--outlined theme--light rounded">
        <div class="elevation-0 v-card v-sheet theme--light">
          <div class="v-card__text font-weight-medium error--text">
            <div class="row">
              Resetting this workspace will remove all accounts/transactions/blocks/contracts from your dashboard.
              You will need to resync them.
              This cannot be undone.
            </div>
            <div class="row mt-2 pb-1">
              <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default error" id="resetWorkspace"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-sync theme--light"></i>Reset Workspace</span></button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings.vue Should load the settings page 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col-lg-5 col">
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text success--text" style="display: none;">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-check-circle theme--dark success--text"></i>
          <div class="v-alert__content">Settings updated</div>
        </div>
      </div>
      <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text error--text" style="display: none;">
        <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
          <div class="v-alert__content">Error while updating settings</div>
        </div>
      </div>
      <h4>Server</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
            <div class="v-input__control">
              <div class="v-input__slot">
                <fieldset aria-hidden="true">
                  <legend style="width: 0px;"><span>​</span></legend>
                </fieldset>
                <div class="v-text-field__slot"><label for="input-9" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">RPC Server</label><input disabled="disabled" id="input-9" type="text"></div>
              </div>
            </div>
          </div>
          To use another server, create another workspace.
        </div>
      </div>
      <h4>Default Contracts Call Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div aria-busy="true" aria-live="polite" role="alert" class="v-skeleton-loader v-skeleton-loader--is-loading theme--light">
          <div class="v-skeleton-loader__list-item-three-line v-skeleton-loader__bone">
            <div class="v-skeleton-loader__paragraph v-skeleton-loader__bone">
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
            </div>
          </div>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Integrations</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table theme--light">
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <tbody>
                  <tr class="">
                    <td class="text-start">Alchemy API</td>
                    <td class="text-start">
                      Disabled
                    </td>
                    <td class="text-right"><button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Manage</span></button></td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <h4>Each workspace has separate integration settings.</h4>
        </div>
      </div>
      <div role="dialog" class="v-dialog__container">
        <!---->
      </div>
      <h4>Workspaces</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
            <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
              <div class="v-toolbar__content" style="height: 48px;">
                <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus theme--light"></i>New Workspace</span></button>
              </div>
            </header>
            <div class="v-data-table__wrapper">
              <table>
                <colgroup>
                  <col class="">
                  <col class="">
                  <col class="">
                </colgroup>
                <thead class="v-data-table-header">
                  <tr>
                    <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="RPC Server: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>RPC Server</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                    <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                  </tr>
                </thead>
                <thead>
                  <tr class="v-data-table__progress">
                    <th colspan="3" class="column">
                      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--absolute theme--light" style="height: 4px;">
                        <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 0%; width: 100%;"></div>
                        <div class="v-progress-linear__buffer"></div>
                        <transition-stub name="fade-transition">
                          <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
                            <div class="v-progress-linear__indeterminate long primary"></div>
                            <div class="v-progress-linear__indeterminate short primary"></div>
                          </div>
                        </transition-stub>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr class="v-data-table__empty-wrapper">
                    <td colspan="3">Loading items...</td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div class="v-data-footer">
              <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
                  <div class="v-input__control">
                    <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-35" class="v-input__slot">
                      <div class="v-select__slot">
                        <div class="v-select__selections">
                          <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-35" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                        </div>
                        <div class="v-input__append-inner">
                          <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                        </div><input type="hidden" value="10">
                      </div>
                      <div class="v-menu">
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div class="v-data-footer__pagination">–</div>
              <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
              <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
            </div>
          </div>
        </div>
      </div>
      <h4>Advanced Options</h4>
      <div class="mb-4 v-card v-sheet v-sheet--outlined theme--light">
        <div aria-busy="true" aria-live="polite" role="alert" class="v-skeleton-loader v-skeleton-loader--is-loading theme--light">
          <div class="v-skeleton-loader__list-item-three-line v-skeleton-loader__bone">
            <div class="v-skeleton-loader__paragraph v-skeleton-loader__bone">
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
              <div class="v-skeleton-loader__text v-skeleton-loader__bone"></div>
            </div>
          </div>
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <div class="pa-0 error v-sheet v-sheet--outlined theme--light rounded">
        <div class="elevation-0 v-card v-sheet theme--light">
          <div class="v-card__text font-weight-medium error--text">
            <div class="row">
              Resetting this workspace will remove all accounts/transactions/blocks/contracts from your dashboard.
              You will need to resync them.
              This cannot be undone.
            </div>
            <div class="row mt-2 pb-1">
              <div class="spacer"></div> <button type="button" class="mt-2 v-btn v-btn--depressed v-btn--flat v-btn--has-bg theme--light v-size--default error" id="resetWorkspace"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-sync theme--light"></i>Reset Workspace</span></button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
